<resources>
    <string name="app_name">Android Quiz</string>
    <string name="question1">1.The basic architecture of computer was developed by</string>
    <string name="q1_option1">Charles Babbagez</string>
    <string name="q1_option2">Garden Moore</string>
    <string name="q1_option3">Blaise Pascal</string>
    <string name="q1_option4">John Von Neumann</string>
    <string name="question2">2.Android is based on which kernel?</string>
    <string name="q2_option1">Linux kernel</string>
    <string name="q2_option2">Windows kernel</string>
    <string name="q2_option3">MAC kernel</string>
    <string name="q2_option4">Hybrid kernel</string>
    <string name="question3">3.For________,code used by Android is not open source</string>
    <string name="q3_option1">Device driver</string>
    <string name="q3_option2">Video driver</string>
    <string name="q3_option3">WIFI driver</string>
    <string name="q3_option4">Bluetooth driver</string>
    <string name="question4">4.If you want to increase the whitespace between widgets, you will need to use the _____ property</string>
    <string name="q4_option1">Android:padding</string>
    <string name="q4_option2">Android:digits</string>
    <string name="q4_option3">Android:capitalize</string>
    <string name="q4_option4">Android:autoText</string>
    <string name="question5">5.Which of the following(s) is/are used for creating user interface?</string>
    <string name="q5_option1">Python</string>
    <string name="q5_option2">Java</string>
    <string name="q5_option3">JavaFx</string>
    <string name="q5_option4">X M L</string>
    <string name="question6">6.Which of the following(s) is/are component of APK file?</string>
    <string name="q6_option1">Resources</string>
    <string name="q6_option2">Delvik Executable</string>
    <string name="q6_option3">Cache</string>
    <string name="q6_option4">None of the above</string>
    <string name="question7">7.Enter the name of the worlds most popular smartphone operating system</string>
    <string name="hint">Enter the OS name</string>
    <string name="question8">8.Is Android hack proof</string>
    <string name="q8_option1">Yes</string>
    <string name="q8_option2">No</string>
    <string name="submit">Get Report</string>
</resources>
