<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.androidquiz.MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        style="@style/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Layout for question 1-->
        <LinearLayout
            android:id="@+id/question1_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/question1"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/charles_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1"
                    android:text="@string/q1_option1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/garden_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1"
                    android:text="@string/q1_option2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/blaise_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1"
                    android:text="@string/q1_option3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/john_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1"
                    android:text="@string/q1_option4"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>

        <!--Layout for question 2-->
        <LinearLayout
            android:id="@+id/question2_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/question2"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radio_group_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/linux_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2"
                    android:text="@string/q2_option1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/windows_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2"
                    android:text="@string/q2_option2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/mac_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2"
                    android:text="@string/q2_option3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/hybrid_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2"
                    android:text="@string/q2_option4"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>

        <!--Layout for question 3-->
        <LinearLayout
            android:id="@+id/question3_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/question3"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radio_group_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/device_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question3"
                    android:text="@string/q3_option1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/video_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question3"
                    android:text="@string/q3_option2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/wifi_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question3"
                    android:text="@string/q3_option3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/bluetooth_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question3"
                    android:text="@string/q3_option4"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>

        <!--Layout for question 4-->
        <LinearLayout
            android:id="@+id/question4_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/question4"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radio_group_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/padding_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4"
                    android:text="@string/q4_option1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/digits_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4"
                    android:text="@string/q4_option2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/capitalize_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4"
                    android:text="@string/q4_option3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/autotext_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4"
                    android:text="@string/q4_option4"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>

        <!--Layout for question 5-->
        <LinearLayout
            android:id="@+id/question5_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/question5"
                android:textColor="#000000"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/py_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question5"
                android:text="@string/q5_option1"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/java_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question5"
                android:text="@string/q5_option2"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/jfx_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question5"
                android:text="@string/q5_option3"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/xml_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question5"
                android:text="@string/q5_option4"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

        <!--Layout for question 6-->
        <LinearLayout
            android:id="@+id/question6_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/question6"
                android:textColor="#000000"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/resources_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question6"
                android:text="@string/q6_option1"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/dalvik_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question6"
                android:text="@string/q6_option2"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/cache_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question6"
                android:text="@string/q6_option3"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/none_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question6"
                android:text="@string/q6_option4"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

        <!--Layout for question 7-->
        <LinearLayout
            android:id="@+id/question7_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7"
                android:textColor="#000000"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/hint"
                android:inputType="text"
                android:onClick="question7"
                android:textColor="#000000" />
        </LinearLayout>


        <!--Layout for question 8-->
        <LinearLayout
            android:id="@+id/question8_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="question8"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radio_group_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question8"
                    android:text="q8_option1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question8"
                    android:text="q8_option2"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp"
                android:onClick="report"
                android:text="@string/submit"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/submit_button"
                android:background="@drawable/layout_bg"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>